--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="stylesheet" href="./css/style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DnD Soundtrack Manager</title>
-</head>
-<body>
-    <audio controls>
-        <source src="./assets/audio/Re4R Luis temaiken.mp3">
-    </audio>
-</body>
+  </head>
+  <body>
+    <header>
+      <h1 class="title">DnD Soundtrack Manager</h1>
+    </header>
+    <main>
+        <div id="container"></div>
+    </main>
+    <footer>
+        <audio controls loop class="audioControls" id="audioController">
+          </audio>
+    </footer>
+    <!-- script load -->
+    <script src="app.js"></script>
+  </body>
 </html>
