--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <script src="jquery-3.7.1.min.js"></script>
     <link rel="stylesheet" href="./css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,11 +13,8 @@
     </header>
     <main>
         <div id="container"></div>
+        <div id="audios"></div>
     </main>
-    <footer>
-        <audio controls loop class="audioControls" id="audioController">
-          </audio>
-    </footer>
     <!-- script load -->
     <script src="app.js"></script>
   </body>
