--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
   </head>
   <body>
     <header>
-      <h1 class="title">DnD Soundtrack Manager</h1>
+      <h1 id="title">DnD Soundtrack Manager</h1>
     </header>
     <main>
-        <div id="container"></div>
-        <div id="audios"></div>
+      <h2 class="title">Combat</h2>
+      <div id="containerCombat" class="container"></div>
+      <h2 class="title">Travel</h2>
+      <div id="containerTravel" class="container"></div>
+      <div id="audios" class="audios"></div>
     </main>
     <!-- script load -->
     <script src="app.js"></script>
