--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
       <div id="containerCombat" class="container"></div>
       <h2 class="title">Travel</h2>
       <div id="containerTravel" class="container"></div>
+      <h2 class="title">Town</h2>
+      <div id="containerTown" class="container"></div>
+      <h2 class="title">Tabern</h2>
+      <div id="containerTabern" class="container"></div>
+      <h2 class="title">Arena</h2>
+      <div id="containerArena" class="container"></div>
       <div id="audios" class="audios"></div>
     </main>
     <!-- script load -->
