--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       <div id="containerTabern" class="container"></div>
       <h2 class="title">Arena</h2>
       <div id="containerArena" class="container"></div>
+      <h2 class="title">Loop</h2>
+      <div id="containerLoop" class="container"></div>
       <div id="audios" class="audios"></div>
     </main>
     <!-- script load -->
