added photos and a experimental solution to seamless audio

--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
     <main>
       <h2 class="title">Combat</h2>
       <div id="containerCombat" class="container"></div>
+      <h2 class="title">Ambiental</h2>
+      <div id="containerAmbiental" class="container"></div>
+      <h2 class="title">Boss</h2>
+      <div id="containerBoss" class="container"></div>
       <h2 class="title">Travel</h2>
       <div id="containerTravel" class="container"></div>
       <h2 class="title">Town</h2>
       <div id="containerTown" class="container"></div>
-      <h2 class="title">Tabern</h2>
-      <div id="containerTabern" class="container"></div>
+      <h2 class="title">Tavern</h2>
+      <div id="containerTavern" class="container"></div>
       <h2 class="title">Arena</h2>
       <div id="containerArena" class="container"></div>
       <h2 class="title">Loop</h2>
